# MMI2022

./: .gitignore  .gitmodules  CanEdit  README.html  README.md  animatedTCPReader.py  dad-environment.yml  enviroment.yml  testTCPReader.ipynb
Arduino/: MyoSensorTest.ino  plotter.py
Arduino/GripperDriverSketch/: GripperDriverSketch.ino  GripperDriverSketch.ino.old  oldGripper.h  oldGripper.h.hmm
Arduino/MyoSensorTest/: MyoSensorTest.ino
DataCollection/: DataCollection.ino  mock.py  recorder.py  recorder2.py  samples.csv
PhaseI/app/: README.md
PhaseI/app/gui/: package-lock.json  package.json  tailwind.config.cjs
PhaseI/app/gui/src/: app.html
PhaseI/app/gui/src/Components/: Console.svelte  Graph.svelte  HelpModality.svelte  LineGraph.svelte  SensorDrawer.svelte  SensorModality.svelte  StatusElement.svelte  StatusPanel.svelte
PhaseI/app/gui/src/Components/Graphing/: Graph.svelte  LineGraph.svelte
PhaseI/app/gui/src/routes/: +layout.svelte  +page.server.js  +page.svelte
PhaseI/app/gui/src/stores/: GraphStore.js  SensorStore.js  UDPStore.js
PhaseI/pico/: CMakeLists.txt  README.md  picow_tcp_server.c
mmi-gui/: package-lock.json  package.json
mmi-gui/src/Components/: Console.svelte
mmi-gui/src/lib/: ApplicationContext.js
mmi-gui/src/routes/: +layout.svelte  +page.server.js  +page.svelte
mmi-gui/src/routes/sensor/: +server.js
pico/: README.md
pico/MMI/: CMakeLists.txt  build.sh  client  client.c  client.js  main.c  plot_log.py  test_log.csv
pico/MMI-MULTICORE/: adc_reader_core.c  constants.c  pico_tcp_shared.h  tcp_server_core.c
pico/MMI-MULTICORE-UDP/: .CMakeLists.txt.swp  CMakeLists.txt  adc_reader_core.c  pico_tcp_shared.h  shared.c  shared.h  tcp_server_core.c  udp_server_core.c
pico/MMI-POLL/: CMakeLists.txt  pico_tcp_poll_sensor.c  pico_tcp_poll_sensor.h
pico/MMI-TCP/: CMakeLists.txt  build.sh  picow_tcp_server.c  tcp_server.c  tcp_server.h
pico/MMI-UDP/: CMakeLists.txt  build.sh  main.c  main.h
pico/MMI_UDP_WORKING/: CMakeLists.txt  build.sh  main.c  main.h
pico/buttonTesting/: build.sh  lwipopts.h  main.c  main.h
pico/include/: adc_queue.h  tcp_client.h  tcp_server.h
pico/lib/: adc_queue.c  tcp_server.c
tcp/: server  tcpServer.cpp
testTCP/: client  client.cpp  server  server.cpp  testServer  testServer.cpp
udp/: TestData.bak.csv  TestData.csv  animatedTCPReader.py  claw-data-Mar22.csv  client.cpp  dump.csv  dump_data.csv  mmi-client.py  model.pkl  model_light.pkl  more_ring_data.csv  right_arm.csv  right_arm_light.csv  ring_data.csv  ring_model.pkl  run_ui.sh  scratch.ipynb  server.ipynb
udp/data/: output.csv
udp/models/: Untitled.ipynb
udp/models/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
